# backend/src/main/java/com/homni/togli/domain/model/ClientType.java
@@ -1,0 +1,18 @@
+/*
+ * (\(\
+ * ( -.-)    I'm watching you.
+ * o_(")(")  Don't write crappy code.
+ *
+ * Copyright (c) Homni Labs
+ * Licensed under the MIT License
+ */
+
+package com.homni.togli.domain.model;
+
+/**
+ * Type of client consuming the API.
+ */
+public enum ClientType {
+    SDK,
+    REST
+}
